--- a/mediaCrop/crop.html
+++ b/mediaCrop/crop.html
@@ -34,7 +34,7 @@
     <div>
         <input type="range" start="0" height="20px"/>
     </div>
-    
+    <h1>Croping this is cool</h1>
     <canvas ></canvas>
 
     <!-- <script src="assets/script/crop.js"></script> -->
